--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,9 @@
 body, h1, h2, h3, h4, h5, h6, p, figure, picture {
     margin: 0;
   }
+
+/* Remove padding from lists */
+ul, ol {
+    padding: 0;
+    list-style: none;
+  }
