--- a/design-system.css
+++ b/design-system.css
@@ -6,3 +6,11 @@
     background-color: var(--clr-secondary);
     color: var(--clr-white);
 }
+
+.mobile-navbar__button {
+    background: none;
+    border: none;
+    color: var(--clr-white);
+    font-size: 24px;
+    cursor: pointer;
+}
