Style content area

--- a/design-system.css
+++ b/design-system.css
@@ -37,6 +37,10 @@
     display: block;
 }
 
+.content {
+    padding: 20px;
+}
+
 /* Hide the desktop navigation menu in mobile view */
 .desktop-menu {
     display: none;
