--- a/design-system.css
+++ b/design-system.css
@@ -45,3 +45,9 @@
 .desktop-menu {
     display: none;
 }
+
+/*---------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+@media (min-width: 650px) {
+    
+}
