--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
     --clr-secondary-dark: #423D33;
     --clr-accent-light: #F4A1B4;
     --clr-accent-dark: #C04467;
+    --clr-text-white: #fafafa;
   }
 
 /* CSS Reset and Border Box Fix */
