--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('<https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lato:wght@400;700&display=swap>');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 
 :root {
 
@@ -19,7 +19,7 @@
     --clr-text-white: #fafafa;
 
     /*Typefaces*/
-    --heading-font-family: 'Playfair Display', serif;
+    --heading-font-family: 'Josefin Sans', sans-serif;
     --body-font-family: 'Lato', sans-serif;
     --heading-font-size: 32px;
     --body-font-size: 16px;
