--- a/design-system.css
+++ b/design-system.css
@@ -60,7 +60,8 @@ INDEX
 }
 
 .c-color-swatch--text-white {
-    color: var(--clr-text-white); /* White */
+    color: var(--clr-text-white);
+    /* White */
 }
 
 .c-color-swatch--text-primary {
@@ -74,66 +75,50 @@ INDEX
 /*--------------------------------------------------- 2.Font ---------------------------------------------------------------------*/
 
 /* Utility Class for Font Family */
-.u-ff-serif { 
-    font-family: 'Josefin Sans', sans-serif; 
+.u-ff-serif {
+    font-family: 'Josefin Sans', sans-serif;
 }
 
-.u-ff-sans { 
-    font-family: 'Lato', sans-serif; 
+.u-ff-sans {
+    font-family: 'Lato', sans-serif;
 }
 
 /* Utility Class for Font Size */
-.u-fs-800 { 
+.u-fs-800 {
     font-size: 800%;
 }
 
 /* Utility Class for Font Weight */
-.u-fw-700 { 
-    font-weight: 700; 
+.u-fw-700 {
+    font-weight: 700;
 }
 
-.u-fw-400 { 
-    font-weight: 400; 
+.u-fw-400 {
+    font-weight: 400;
 }
 
 /* Utility Class for Letter Spacing */
-.u-letter-spacing-2 { 
-    letter-spacing: 2px; 
+.u-letter-spacing-2 {
+    letter-spacing: 2px;
 }
 
 /* Utility Classes for Text Color */
-.u-text-accent { 
-    color: var(--clr-accent); 
+.u-text-accent {
+    color: var(--clr-accent);
 }
 
-.u-text-primary { 
-    color: var(--clr-primary-text); 
+.u-text-primary {
+    color: var(--clr-primary-text);
 }
 
 
-.heading {
-    font-family: var(--heading-font-family);
-    font-size: var(--heading-font-size);
-    font-weight: var(--heading-font-weight);
-    line-height: var(--heading-line-height);
-    letter-spacing: var(--letter-spacing);
-    color: var(--heading-color);
-  }
-  
-  .body-text {
-    font-family: var(--body-font-family);
-    font-size: var(--body-font-size);
-    font-weight: var(--body-font-weight);
-    line-height: var(--body-line-height);
-    letter-spacing: var(--letter-spacing);
-    color: var(--body-color);
-  }
-  
-  .cta {
+
+.cta {
     color: var(--cta-color);
-    font-weight: 700; /* Bold for calls to action */
-  }
-  
+    font-weight: 700;
+    /* Bold */
+}
+
 
 
 /* Base styles for the navbar, adapting to new color scheme */
