Add changes to typeface content

--- a/design-system.css
+++ b/design-system.css
@@ -85,7 +85,7 @@ INDEX
 
 /* Utility Class for Font Size */
 .u-fs-800 {
-    font-size: 800%;
+    font-size: 800;
 }
 
 /* Utility Class for Font Weight */
