--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 
 :root {
 
+  --base-font-size: 16px;
   /*Colors*/
   --clr-primary-text: #2D572C;
   --clr-primary-bg: #DFF2D8;
@@ -27,18 +28,12 @@
   --heading-font-family: 'Josefin Sans', sans-serif;
   --body-font-family: 'Lato', sans-serif;
 
-  /* Font Sizes */
-  --heading-font-size-h1: 36px;
-  /* Example size, adjust as needed */
-  --heading-font-size-h2: 32px;
-  /* Example size, adjust as needed */
-  --heading-font-size-h3: 28px;
-  /* Example size, adjust as needed */
-  --heading-font-size-h4: 24px;
-  /* Example size, adjust as needed */
-  --heading-font-size-h5: 20px;
-  /* Example size, adjust as needed */
-  --body-font-size: 16px;
+  --heading-font-size-h1: 2.25rem;
+  --heading-font-size-h2: 2rem;  
+  --heading-font-size-h3: 1.75rem; 
+  --heading-font-size-h4: 1.5rem;  
+  --heading-font-size-h5: 1.25rem; 
+  --body-font-size: 1rem;
 
   /* Font Weights */
   --heading-font-weight: 700;
