Refactor color scheme in HTML and CSS
- Removed outdated color utility classes from HTML.
- Added new color utility classes to enhance UI consistency.
- Updated color variables in CSS for improved theme adaptability.

--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,17 @@
 
   /*Colors*/
   --clr-primary-text: #1B3A12;
-  --clr-primary-bg: #DFF2D8;
-  --clr-accent: #E0567D;
-  --clr-secondary-bg: #F0EAD6;
   --clr-secondary-text: #5A4638;
+  --clr-light-text: #fafafa;
+
+  --clr-primary-bg: #DFF2D8;
   --clr-primary-light: #AED9AA;
+
+  --clr-secondary-bg: #F0EAD6;
   --clr-secondary-light: #FBF0E1;
   --clr-secondary-dark: #423D33;
+  
+  --clr-accent: #E0567D;
   --clr-accent-light: #F4A1B4;
   --clr-accent-dark: #C04467;
 
