--- a/design-system.css
+++ b/design-system.css
@@ -59,9 +59,17 @@ INDEX
     color: var(--clr-secondary-text);
 }
 
-/* Utility Classes for Text Color */
-.c-color-swatch---accent {
+.c-color-swatch--text-light {
+    color: var(--clr-light-text);
+}
+
+
+.c-color-swatch--text-accent {
     color: var(--clr-accent);
+}
+
+.c-color-swatch--text-accent-dark {
+    color: var(--clr-accent-dark);
 }
 
 
@@ -116,13 +124,14 @@ INDEX
     margin: 2% 5% 2% 5%;
     padding: 5%;
     background-color: white;
+    gap: 5%;
 }
 
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 16px;
+    padding: 1%;
     background-color: var(--clr-secondary-bg);
     color: var(--clr-primary-text);
 }
@@ -201,6 +210,7 @@ INDEX
     gap: 20px;
     align-items: center;
     justify-content: center;
+    grid-template-columns: repeat(1, 1fr);
 }
 
 .c-color-swatch {
@@ -209,11 +219,23 @@ INDEX
 }
 
 .swatch-container {
-    padding: 100px;
+    padding: 5%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
 /*---------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
-@media (min-width: 650px) {}
+@media (min-width: 800px) {
+    .l-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 1200px) {
+    .l-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
