Update navbar html

--- a/design-system.css
+++ b/design-system.css
@@ -115,8 +115,7 @@ INDEX
 
 
 
-/* Base styles for the navbar, adapting to new color scheme */
-
+/*Navbar Styles*/
 
 
 /* Initially hidden menu to be displayed with a mobile-first approach */
