--- a/design-system.css
+++ b/design-system.css
@@ -175,6 +175,23 @@ img.close.show {
     .l-grid {
         grid-template-columns: repeat(2, 1fr);
     }
+
+    /*navbar for desktop*/
+    nav.navigation {
+        display: flex;
+    }
+
+    nav.navigation a {
+        font-size: 16px;
+        padding: 10px;
+        color: white;
+        font-weight: bold;
+        text-decoration: none;
+    }
+
+    div.toggleBox {
+        display: none;
+    }
 }
 
 @media (min-width: 1200px) {
