--- a/design-system.css
+++ b/design-system.css
@@ -117,6 +117,11 @@ INDEX
 
 /*Navbar Styles*/
 
+.logo_text{
+    text-decoration: none;
+    font-style: bold;
+}
+
 header {
     padding: 20px;
     display: flex;
